--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Arxiv Sanity Preserver</title>
+<title>Arxiv Sanity Preserver - Astrophysics Version</title>
 
 <!-- MathJax -->
 <script type="text/x-mathjax-config">
@@ -176,8 +176,9 @@ $(document).ready(function(){
 	<a href="/">
 	<div id="tittxt">
 		<h1>Arxiv Sanity Preserver</h1>
-		Built in spare time by <a href="https://twitter.com/karpathy">@karpathy</a> to accelerate research.<br>
-		Serving last {{ totpapers }} papers from cs.[CV|CL|LG|AI|NE]/stat.ML
+		Original built in spare time by <a href="https://twitter.com/karpathy">@karpathy</a> to accelerate research in AI/machine learning.<br>
+    Astrophysics fork by "https://twitter.com/trampolinerocket">@trampolinerocket</a> to help astro research and to have the astro arxiv interface I've always wanted.<br>
+		Serving last {{ totpapers }} papers from astro-ph & gr-qc
 	</div>
 	</a>
 </div>
